// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`File > crossSerializeAsync > scoped > supports File 1`] = `
"($R=>$R[0]=new File([$R[2]=($R[3]=(length, b64) => {
  const decoded = atob(b64);
  const arr = new Uint8Array(length);
  for (let i = 0; i < length; i++) {
    arr[i] = decoded.charCodeAt(i);
  };
  return arr.buffer;
})(11,"SGVsbG8gV29ybGQ=")],"hello.txt",$R[1]={type:"text/plain",lastModified:1681027542680}))($R["example"])"
`;

exports[`File > crossSerializeAsync > supports File 1`] = `
"$R[0]=new File([$R[2]=($R[3]=(length, b64) => {
  const decoded = atob(b64);
  const arr = new Uint8Array(length);
  for (let i = 0; i < length; i++) {
    arr[i] = decoded.charCodeAt(i);
  };
  return arr.buffer;
})(11,"SGVsbG8gV29ybGQ=")],"hello.txt",$R[1]={type:"text/plain",lastModified:1681027542680})"
`;

exports[`File > serializeAsync > supports File 1`] = `
"new File([((length, b64) => {
  const decoded = atob(b64);
  const arr = new Uint8Array(length);
  for (let i = 0; i < length; i++) {
    arr[i] = decoded.charCodeAt(i);
  };
  return arr.buffer;
})(11,"SGVsbG8gV29ybGQ=")],"hello.txt",{type:"text/plain",lastModified:1681027542680})"
`;

exports[`File > toCrossJSONAsync > supports File 1`] = `"{"t":25,"i":0,"s":{"name":{"t":1,"s":"hello.txt"},"options":{"t":10,"i":1,"p":{"k":["type","lastModified"],"v":[{"t":1,"s":"text/plain"},{"t":0,"s":1681027542680}],"s":2},"o":0},"buffer":{"t":19,"i":2,"s":"SGVsbG8gV29ybGQ=","l":11,"f":{"t":26,"i":3,"s":5}}},"c":"seroval-plugins/web/File"}"`;

exports[`File > toJSONAsync > supports File 1`] = `"{"t":{"t":25,"i":0,"s":{"name":{"t":1,"s":"hello.txt"},"options":{"t":10,"i":1,"p":{"k":["type","lastModified"],"v":[{"t":1,"s":"text/plain"},{"t":0,"s":1681027542680}],"s":2},"o":0},"buffer":{"t":19,"i":2,"s":"SGVsbG8gV29ybGQ=","l":11,"f":{"t":26,"i":3,"s":5}}},"c":"seroval-plugins/web/File"},"f":31,"m":[]}"`;
